# netser

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: CMakeLists.txt
include/netser/: aligned_ptr.hpp  array.hpp  field.hpp  field_mixin.hpp  fill_random.hpp  fwd.hpp  integer.hpp  integer_read.hpp  integer_shared.hpp  integer_write.hpp  layout.hpp  layout_fields.hpp  layout_iterator.hpp  layout_node.hpp  layout_tree.hpp  mapping.hpp  mapping_tree.hpp  mem_access.hpp  netser.hpp  netser_config_if.hpp  platform.hpp  platform_generic.hpp  platform_toolkit.hpp  range.hpp  read.hpp  refactor_tests.hpp  remainder.hpp  reserved.hpp  static_array.hpp  type_list.hpp  utility.hpp  write.hpp  zip_iterator.hpp  zipped.hpp
include/netser/garbage/: test.hpp  tree_iterator.hpp
netser-devel/: CMakeLists.txt  baby_test.cpp  main.cpp  merge_sort.hpp  netser_config.hpp  ptp_announce_test.cpp  test_mapping.cpp
tests/: CMakeLists.txt  integer-read.cpp  integer-test.cpp  integer-write.cpp  netser_config.hpp  test_shared.hpp  zipped.cpp
